# OceanMarcher

./: CMakeLists.txt  README.md  main.cpp
include/: Ocean.h  Settings.h
include/Compute/: PhillipsSpectrum.h
include/compute/: FFT.h  Gaussian.h  PhillipsSpectrum.h
include/rendering/: Camera.h  Hit.h  Image.h  Object.h  Ray.h  Scene.h  Texture.h
include/utils/: CommandLineOptions.h  Complex.h  Vector2.h  Vector3.h
src/: CMakeLists.txt  Ocean.cpp
src/Compute/: PhillipsSpectrum.cpp
src/compute/: FFT.cpp  Gaussian.cpp  Ocean.cpp  PhillipsSpectrum.cpp
src/rendering/: Camera.cpp  Hit.cpp  Image.cpp  Object.cpp  Ray.cpp  Scene.cpp  Texture.cpp
src/utils/: CommandLineOptions.cpp  Complex.cpp  Vector2.cpp  Vector3.cpp
